--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "prepack": "yarn build"
   },
   "peerDependencies": {
     "react-router": ">=5.1"
