--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-router-title",
-  "version": "1.2.1",
+  "version": "1.3.0-beta.1",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "author": "@lynoapp",
